<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_self2"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_card"
        android:name="com.example.myapplication.ui.Card.CardFragment"
        android:label="Card"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/nav_Notif"
        android:name="com.example.myapplication.ui.notifications.NotificationsFragment"
        android:label="Notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_sett"
        android:name="com.example.myapplication.ui.Setting.SettingFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_setting"
        />



</navigation>